--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -62,7 +62,11 @@ a
 	display: block;
 }
 
-
+iframe
+{
+	width: 100%;
+	height: 100%;
+}
 /* Damos estilo a la parte del contenido*/
 #articulo
 {
@@ -70,4 +74,30 @@ a
 	min-width: 400px;
 	height: auto;
 }
+h1
+{
+	margin-left: 12.5%;
+	margin-right: 12.5%;
+}
+img
+{
+	display: block;
+}
+
+#logoCab
+{
+	margin-left: 45%;
+	margin-left: 45%;
+	height: 95px; 
+	width: 95px;
+}
+
+#logoFoo
+{
+	margin-left: 45%;
+	margin-right: 45%;
+	height: 80px; 
+	width: 80px;
+}
+
 
