--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -19,6 +19,12 @@ iframe{
 	border: 2px solid gray;
 
 }
+
+@font-face {
+    font-family: letraGlobal;
+    src: url(../fuentes/Stronger.ttf);
+}
+
 body
 {
 	width:80%;
@@ -26,6 +32,7 @@ body
 	height: 100%;
 	font-size: 1.75em;
 	min-height: 300px;
+	font-family: letraGlobal;
 	
 }
 header, footer
