--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -1,160 +1,150 @@
-*
-{
-	margin: 0;
-	padding: 0;
-}
-html
-{
-	height: 100%;
-}
-#titulo-cabecero, #titulo-pie{
-	text-align: center;
-	padding-bottom:1%;
-}
-#cabecero{
-	border: 2px solid gray;
-
-}
-iframe{
-	border: 2px solid gray;
-
+* {
+  margin: 0;
+  padding: 0;
 }
 
-@font-face {
-    font-family: letraGlobal;
-    src: url(../fuentes/Stronger.ttf);
+html {
+  height: 100%;
 }
 
-body
-{
-	width:80%;
-	margin: auto;
-	height: 100%;
-	font-size: 1.75em;
-	min-height: 300px;
-	font-family: letraGlobal;
-	
-}
-header, footer
-{
-	background: rgb(221,212,232);
-	min-height: 15%;
-	width: 100%;
-}
-#contenedor
-{
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	width:100%;
-	background: lightblue;
-	height: 100%;
+#titulo-cabecero,
+#titulo-pie {
+  text-align: center;
+  padding-bottom: 1%;
 }
 
-#navegador:hover{
-	overflow-y:scroll;
+#cabecero {
+  border: 2px solid gray;
 }
 
-#navegador
-{
-	width: 35%;
-	height: 100%;
-	
-	position: relative;
-	border: 2px solid gray;
-}
-ul
-{
-	list-style-type: none;
-	margin-left: 10%;
+iframe {
+  border: 2px solid gray;
 }
 
-.Encabezado
-{
-	color: black;
-	margin-bottom:5%;
-	
+body {
+  width: 80%;
+  margin: auto;
+  height: 100%;
+  font-size: 1.75em;
+  min-height: 300px;
 }
-a
-{
-	text-decoration: none;
+
+header,
+footer {
+  background: rgb(221, 212, 232);
+  min-height: 15%;
+  width: 100%;
+}
+
+#contenedor {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  background: lightblue;
+  height: 100%;
+}
+
+#navegador:hover {
+  overflow-y: scroll;
+}
+
+#navegador {
+  width: 35%;
+  height: 100%;
+  position: relative;
+  border: 2px solid gray;
+}
+
+ul {
+  list-style-type: none;
+  margin-left: 10%;
+}
+
+.Encabezado {
+  color: black;
+  margin-bottom: 5%;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* Creamos el efecto de lista deplegable*/
-#lista-1, #lista-2, #lista-3
-{
-	display: none;
-}
-#desplegable-1:hover>#lista-1, #desplegable-2:hover>#lista-2, #desplegable-3:hover>#lista-3
-{
-	display: block;
-}
-#lista{
-	padding-top:2%; 
+#lista-1,
+#lista-2,
+#lista-3 {
+  display: none;
 }
 
-#lista li{
-	margin-bottom:4%;
+#desplegable-1:hover > #lista-1,
+#desplegable-2:hover > #lista-2,
+#desplegable-3:hover > #lista-3 {
+  display: block;
 }
 
-iframe
-{
-	width: 100%;
-	height: 100%;
+#lista {
+  padding-top: 2%;
 }
+
+#lista li {
+  margin-bottom: 4%;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
+
 /* Damos estilo a la parte del contenido*/
-#articulo
-{
-	width: 64.5%;
-	min-width: 400px;
-	height: auto;
-	
-}
-h1
-{
-	margin-left: 12.5%;
-	margin-right: 12.5%;
-}
-img
-{
-	display: block;
+#articulo {
+  width: 64.5%;
+  min-width: 400px;
+  height: auto;
 }
 
-#logoCab
-{
-	margin-left: 45%;
-	padding-top: 1%;
-	padding-bottom: 1%;
-	height: 95px; 
-	width: 95px;
+h1 {
+  margin-left: 12.5%;
+  margin-right: 12.5%;
 }
 
-#logoCab:hover, #logoFoo:hover {
-	-webkit-animation: rotation 2s infinite linear;
+img {
+  display: block;
+}
+
+#logoCab {
+  margin-left: 45%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  height: 95px;
+  width: 95px;
+}
+
+#logoCab:hover,
+#logoFoo:hover {
+  -webkit-animation: rotation 2s infinite linear;
 }
 
 @-webkit-keyframes rotation {
-	from {
-			-webkit-transform: rotate(0deg);
-	}
-	to {
-			-webkit-transform: rotate(359deg);
-	}
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+  }
 }
 
-
-#logoFoo
-{
-	margin-left: 45%;
-	margin-right: 45%;
-	padding-top:1%;
-	padding-bottom:1%;
-	height: 80px; 
-	width: 80px;
-}
-#pie{
-	position: relative;
-	bottom: 0%;
-	border: 2px solid gray;	
+#logoFoo {
+  margin-left: 45%;
+  margin-right: 45%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  height: 80px;
+  width: 80px;
 }
 
+#pie {
+  position: relative;
+  bottom: 0%;
+  border: 2px solid gray;
+}
